--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "inspect-ai>=0.3.132",
+    "openai>=1.107.2",
     "pandas>=2.3.2",
     "pyarrow>=21.0.0",
 ]
